--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
   </head>
   <body class="app-wrapper" id="app-wrapper">
     <script src="js/index.js" type="module"></script>
+    <body></body>
   </body>
 </html>
